Fixes padding on mobile view

--- a/styleguide/source/assets/scss/03-organisms/_four-up-teaser.scss
+++ b/styleguide/source/assets/scss/03-organisms/_four-up-teaser.scss
@@ -15,20 +15,19 @@
 
   .ama__article-stub {
     @include gutter($margin-bottom-full...);
-    @include gutter($padding-left-quarter...);
     flex-grow: 1;
     flex-basis: 0;
-
-    &:first-child {
-      padding: 0;
-    }
-
+    
     &__copy > h2 {
       @extend %ama__type--small;
     }
 
     @include breakpoint($bp-small) {
       @include gutter($padding-left-half...);
+
+      &:first-child {
+        padding: 0;
+      }
     }
   }
 }
